--- a/main.html
+++ b/main.html
@@ -6,6 +6,37 @@
   </head>
   <body>
     <!-- Write your code here -->
+
+	  <header>
+        <h1>Header</h1>
+    </header>
+
+    <!-- Navigation Bar -->
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+
+    <!-- Main Content Area -->
+    <main>
+        <h1>Main Section</h1>
+        <p>This is a paragraph inside the main section of the webpage.</p>
+    </main>
+
+    <!-- Sidebar Section -->
+    <aside>
+        <h2>Sidebar</h2>
+        <p>This is a paragraph inside the sidebar section.</p>
+    </aside>
+
+    <!-- Footer Section -->
+    <footer>
+        <p>© Copyright 2020 Footer</p>
+    </footer>
+
     <script src="script.js"></script>
   </body>
 </html>
